--- a/SistemaFacturacionSRI.BlazorApp/Components/App.razor
+++ b/SistemaFacturacionSRI.BlazorApp/Components/App.razor
@@ -21,4 +21,15 @@
     <script src="_framework/blazor.web.js"></script>
 </body>
 
+<script>
+    window.descargarArchivo = (nombre, contenidoBase64, mimeType) => {
+        const link = document.createElement('a');
+        link.download = nombre;
+        link.href = `data:${mimeType};base64,${contenidoBase64}`;
+        document.body.appendChild(link);
+        link.click();
+        document.body.removeChild(link);
+    };
+</script>
+
 </html>
